# video-service

./: .env-example  .gitignore  Dockerfile  Makefile  README.md  celery_run.sh  docker-compose.yml  pyproject.toml
app/: dependencies.py  exceptions.py  logger.py  main.py  settings.py
app/handlers/: __init__.py  auth.py  user.py  video.py
app/infrastructure/cache/: accessor.py
app/infrastructure/database/: __init__.py  accessor.py  database.py
app/migration/: env.py
app/migration/versions/: 903bc046ebba_initial_revision.py
app/models/: __init__.py  user.py  video.py
app/repository/: cache_video.py  user.py  video.py
app/schema/: auth.py  user.py  video.py
app/service/: auth.py  user.py  video.py
app/tasks/: celery.py  generate_hls.py
tests/: cache.py  conftest.py  database.py
tests/fixtures/user/: user_model.py  user_repository.py  user_service.py
tests/fixtures/video/: video_cache_repository.py  video_model.py  video_repository.py  video_service.py
tests/integration/: test_user_service.py  test_video_service.py
tests/unit/: test_video_service.py
