[project]
name = "video-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Yurii",email = "yurchik1997yurchik@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "sqlalchemy[async] (>=2.0.41,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "python-jose (>=3.4.0,<4.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "pydantic[email] (>=2.11.4,<3.0.0)",
    "celery (>=5.5.2,<6.0.0)",
    "redis[async] (>=6.1.0,<7.0.0)",
    "types-redis (>=4.6.0.20241004,<5.0.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
